--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
-    "title": "Stylish Portfolio",
-    "name": "startbootstrap-stylish-portfolio",
-    "version": "5.0.4",
-    "scripts": {
-        "start": "gulp watch"
-    },
-    "description": "A stylish portfolio HTML template built with Bootstrap",
+    "title": "Small Business",
+    "name": "startbootstrap-small-business",
+    "version": "4.1.2",
+    "description": "A small business HTML template built with Bootstrap",
     "keywords": [
         "css",
         "sass",
@@ -14,9 +11,9 @@
         "theme",
         "template"
     ],
-    "homepage": "https://startbootstrap.com/template-overviews/stylish-portfolio",
+    "homepage": "https://startbootstrap.com/template-overviews/small-business",
     "bugs": {
-        "url": "https://github.com/BlackrockDigital/startbootstrap-stylish-portfolio/issues",
+        "url": "https://github.com/BlackrockDigital/startbootstrap-small-business/issues",
         "email": "feedback@startbootstrap.com"
     },
     "license": "MIT",
@@ -26,26 +23,14 @@
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/BlackrockDigital/startbootstrap-stylish-portfolio.git"
+        "url": "https://github.com/BlackrockDigital/startbootstrap-small-business.git"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "5.8.1",
-        "bootstrap": "4.3.1",
-        "jquery": "3.3.1",
-        "jquery.easing": "^1.4.1",
-        "simple-line-icons": "^2.4.1"
+        "bootstrap": "4.2.1",
+        "jquery": "3.3.1"
     },
     "devDependencies": {
         "browser-sync": "2.26.3",
-        "del": "4.0.0",
-        "gulp": "4.0.0",
-        "gulp-autoprefixer": "6.0.0",
-        "gulp-clean-css": "4.0.0",
-        "gulp-header": "2.0.7",
-        "gulp-plumber": "^1.2.1",
-        "gulp-rename": "1.4.0",
-        "gulp-sass": "4.0.2",
-        "gulp-uglify": "3.0.2",
-        "merge-stream": "^1.0.1"
+        "gulp": "4.0.0"
     }
 }
