--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -2,6 +2,9 @@ main:
   - name: "Acasă"
     url: "/"
     weight: 1
+  - name: "Servicii"
+    url: "/services/"
+    weight: 2
   - name: "Echipa"
     url: "/team/"
     weight: 4
