--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-url: https://appa.md/
+url: https://appa.md
 baseurl: ''
 permalink: pretty
 title: 'Asociația Pentru Promovarea Antreprenoriatului'
