--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -18,7 +18,10 @@ main:
 footer:
   - name: "Acasă"
     url: "/"
-    weight: 1
+    weight: 2
   - name: "Contacte"
     url: "/contact/"
-    weight: 2
+    weight: 3
+  - name: "Activitate"
+    url: "/activity/"
+    weight: 1
